--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,12 @@
   text-align: center;
 }
 
+/* body {
+  color: white;
+  
+  background-color: rgb(0, 0, 0);
+} */
+
 #lol-header {
   padding: 20px;
 }
