--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,31 @@
   text-align: center;
 }
 
-/* body {
-  color: white;
+body {
+  /* color: white; */
   
-  background-color: rgb(0, 0, 0);
-} */
+  /* background-color: rgb(250, 250, 250); */
+  /* background-image: url('http://res.cloudinary.com/dok4pz3i3/image/upload/v1613183701/summonersrift2-opa60_xuunw1.jpg'); */
+  /* background-image: url('http://res.cloudinary.com/dok4pz3i3/image/upload/v1613183767/summonersrift2-opa50_mtukan.jpg');
+  background-repeat: no-repeat;
+  background-position: center fixed;
+  background-position-x: -30px;
+  background-size: cover;
+  height: 100vh; */
+}
 
 #lol-header {
   padding: 20px;
+  font-size: 60px;
+  /* font-family: 'Permanent Marker', cursive; */
+  /* font-family: 'Alegreya', serif; */
+  font-family: 'Kalam', cursive;
 }
 
-#select-tier {
-  padding: 30px;
-  
+#leaderboards-header {
+  padding-top: 30px;
+  padding-bottom: 15px;
+  font-family: 'Nunito', sans-serif;
 }
 
 .home {
@@ -28,7 +40,67 @@
   list-style-type: none;
 }
 
+.scroll-div {
+  height: 500px;
+  overflow-y: scroll;
+  /* overflow: hidden;  */
+  /* border-left: 2px solid rgb(221, 221, 221); */
+  width: 250px;
+
+}
+
+.scroll-div::-webkit-scrollbar {
+  display: none;
+}
+
+#bg-img-div {
+  background-image: url('http://res.cloudinary.com/dok4pz3i3/image/upload/v1613183767/summonersrift2-opa50_mtukan.jpg');
+  /* background-image: url('http://res.cloudinary.com/dok4pz3i3/image/upload/v1613183701/summonersrift2-opa60_xuunw1.jpg'); */
+  background-repeat: no-repeat;
+  background-position: center fixed;
+  /* background-position-x: -30px; */
+  background-size: cover;
+  width: 100%;
+
+}
+
 #btn-div {
   display: flex;
   justify-content: space-evenly;
+  padding-bottom: 50px;
+  /* height: 100vh; */
+}
+
+#tier-button{
+  margin-bottom: 40px;
+  margin-top: 10px;
+  width: 140px;
+  color: black;
+  background-color: rgba(131, 157, 241, 0.486);
+  border: none;
+  font-size: 19px;
+  font-family: 'Nunito', sans-serif;
+  /* width: 100%; */
+}
+
+#data-div {
+  /* background-color: rgb(188, 155, 255); */
+  font-size: 18px;
+  font-weight: 900;
+
+  font-family: 'Nunito', sans-serif;
+}
+
+#patchnotes-master-div {
+  margin-top: 50px;
+}
+
+#patch-notes-header {
+  font-family: 'Nunito', sans-serif;
+}
+
+#patch-notes-div {
+  font-size: 19px;
+  font-family: 'Nunito', sans-serif;
+  text-align: left;
 }
