--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  padding-bottom: 100px;
 }
 
 body {
@@ -16,7 +17,7 @@ body {
 }
 
 #lol-header {
-  padding: 20px;
+  padding: 40px;
   font-size: 60px;
   /* font-family: 'Permanent Marker', cursive; */
   /* font-family: 'Alegreya', serif; */
@@ -92,10 +93,11 @@ body {
 }
 
 #patchnotes-master-div {
-  margin-top: 50px;
+  margin-top: 40px;
 }
 
 #patch-notes-header {
+  margin-bottom: 20px;
   font-family: 'Nunito', sans-serif;
 }
 
@@ -103,4 +105,21 @@ body {
   font-size: 19px;
   font-family: 'Nunito', sans-serif;
   text-align: left;
+}
+
+#patch-notes-ul {
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+}
+
+.patch-notes-list-item {
+  width: 400px;
+  min-width: 400px;
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 5%;
+  list-style-type: none;
+  margin: 5px;
+  background-color: rgb(235, 255, 252);
 }
