--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,8 @@ body {
 }
 
 #lol-header {
-  padding: 40px;
+  padding-top: 45px;
+  padding-bottom: 35px;
   font-size: 60px;
   /* font-family: 'Permanent Marker', cursive; */
   /* font-family: 'Alegreya', serif; */
@@ -26,7 +27,7 @@ body {
 
 #leaderboards-header {
   padding-top: 30px;
-  padding-bottom: 15px;
+  /* padding-bottom: 15px; */
   font-family: 'Nunito', sans-serif;
 }
 
@@ -36,6 +37,11 @@ body {
   justify-content: space-evenly;
 }
 
+#summ-list-names {
+  /* color: red; */
+  list-style-type: none;
+  font-size: 21px;
+}
 #summ-list {
   /* color: red; */
   list-style-type: none;
@@ -77,7 +83,7 @@ body {
   margin-top: 10px;
   width: 140px;
   color: black;
-  background-color: rgba(131, 157, 241, 0.486);
+  background-color: rgba(131, 157, 241, 0.83);
   border: none;
   font-size: 19px;
   font-family: 'Nunito', sans-serif;
@@ -121,5 +127,5 @@ body {
   border-radius: 5%;
   list-style-type: none;
   margin: 5px;
-  background-color: rgb(235, 255, 252);
+  background-color: rgba(235, 255, 252, 0.748);
 }
