--- a/src/App.css
+++ b/src/App.css
@@ -19,10 +19,11 @@ body {
 #lol-header {
   padding-top: 45px;
   padding-bottom: 35px;
-  font-size: 60px;
+  font-size: 55px;
   /* font-family: 'Permanent Marker', cursive; */
   /* font-family: 'Alegreya', serif; */
   font-family: 'Kalam', cursive;
+  letter-spacing: -3px;
 }
 
 .hover-effect:hover {
@@ -63,12 +64,12 @@ body {
 }
 
 .scroll-div {
-  height: 494px;
+  height: 480px;
   overflow-y: scroll;
   /* overflow: hidden;  */
   /* border-left: 2px solid rgb(221, 221, 221); */
   width: 250px;
-  margin-bottom: 40px;
+  /* margin-bottom: 40px; */
 
 }
 
@@ -91,14 +92,14 @@ body {
 #btn-div {
   display: flex;
   justify-content: space-evenly;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
   flex-wrap: wrap;
   /* height: 100vh; */
 }
 
 .tier-header{
   /* margin-bottom: 10px; */
-  /* margin-top: 35px; */
+  margin-top: 35px;
   /* width: 140px; */
   color: rgba(0, 0, 0, 0.878);
   /* background-color: rgba(131, 157, 241, 0.83); */
@@ -106,6 +107,8 @@ body {
   font-size: 28px;
   font-family: 'Nunito', sans-serif;
   border-bottom: 2px solid black;
+
+
   /* text-decoration: underline; */
   /* width: 100%; */
 }
