--- a/src/App.css
+++ b/src/App.css
@@ -3,22 +3,9 @@
   padding-bottom: 100px;
 }
 
-body {
-  /* color: white; */
-  
-  /* background-color: rgb(250, 250, 250); */
-  /* background-image: url('http://res.cloudinary.com/dok4pz3i3/image/upload/v1613183701/summonersrift2-opa60_xuunw1.jpg'); */
-  /* background-image: url('http://res.cloudinary.com/dok4pz3i3/image/upload/v1613183767/summonersrift2-opa50_mtukan.jpg');
-  background-repeat: no-repeat;
-  background-position: center fixed;
-  background-position-x: -30px;
-  background-size: cover;
-  height: 100vh; */
-}
-
 #lol-header {
-  padding-top: 45px;
-  padding-bottom: 35px;
+  padding-top: 25px;
+  padding-bottom: 9px;
   font-size: 55px;
   /* font-family: 'Permanent Marker', cursive; */
   /* font-family: 'Alegreya', serif; */
@@ -39,7 +26,6 @@ body {
   /* padding-bottom: 10px; */
   font-size: 31px;
   font-family: 'Nunito', sans-serif;
-
 }
 
 .home {
@@ -70,7 +56,6 @@ body {
   /* border-left: 2px solid rgb(221, 221, 221); */
   width: 250px;
   /* margin-bottom: 40px; */
-
 }
 
 .scroll-div::-webkit-scrollbar {
@@ -86,7 +71,6 @@ body {
   background-size: cover;
   width: 100%;
   max-width: 100%;
-
 }
 
 #btn-div {
@@ -107,10 +91,6 @@ body {
   font-size: 28px;
   font-family: 'Nunito', sans-serif;
   border-bottom: 2px solid black;
-
-
-  /* text-decoration: underline; */
-  /* width: 100%; */
 }
 
 
@@ -118,7 +98,6 @@ body {
   /* background-color: rgb(188, 155, 255); */
   font-size: 18px;
   font-weight: 900;
-
   font-family: 'Nunito', sans-serif;
 }
 
@@ -163,5 +142,5 @@ body {
 }
 
 #loading {
-  display: none;
+  display: block;
 }
