--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,6 @@
 .App {
   text-align: center;
-  padding-bottom: 100px;
-}
-
-body {
-  /* color: white; */
-  
-  /* background-color: rgb(250, 250, 250); */
-  /* background-image: url('http://res.cloudinary.com/dok4pz3i3/image/upload/v1613183701/summonersrift2-opa60_xuunw1.jpg'); */
-  /* background-image: url('http://res.cloudinary.com/dok4pz3i3/image/upload/v1613183767/summonersrift2-opa50_mtukan.jpg');
-  background-repeat: no-repeat;
-  background-position: center fixed;
-  background-position-x: -30px;
-  background-size: cover;
-  height: 100vh; */
+  /* padding-bottom: 100px; */
 }
 
 #lol-header {
@@ -39,7 +26,6 @@ body {
   /* padding-bottom: 10px; */
   font-size: 31px;
   font-family: 'Nunito', sans-serif;
-
 }
 
 .home {
@@ -64,11 +50,17 @@ body {
 }
 
 .scroll-div {
-  height: 480px;
+
+  /* min-height: 100vh; */
+  /* height: 570px; */
+  max-height: 78vh;
   overflow-y: scroll;
   /* overflow: hidden;  */
   /* border-left: 2px solid rgb(221, 221, 221); */
   width: 250px;
+  display: flex;
+  flex-direction: column;
+
   /* margin-bottom: 40px; */
 
 }
@@ -86,7 +78,8 @@ body {
   background-size: cover;
   width: 100%;
   max-width: 100%;
-
+  /* height: 100vh;
+  max-height: 100vh;   */
 }
 
 #btn-div {
@@ -123,18 +116,24 @@ body {
 }
 
 #patchnotes-master-div {
-  margin-top: 40px;
+  padding-top: 40px;
+  background-color: rgba(0, 0, 0, 0.897);
+
 }
 
 #patch-notes-header {
   margin-bottom: 20px;
   font-family: 'Nunito', sans-serif;
+  color: white;
 }
 
 #patch-notes-div {
   font-size: 19px;
   font-family: 'Nunito', sans-serif;
   text-align: left;
+  padding-bottom: 20px;
+  min-height: 100vh;
+  /* height: 10vh; */
 }
 
 #patch-notes-ul {
@@ -146,7 +145,7 @@ body {
 .patch-notes-list-item {
   height: 137px;
   overflow-y: scroll;
-  width: 400px;
+  width: 350px;
   max-width: 100%;
   padding-left: 15px;
   padding-top: 5px;
@@ -162,6 +161,82 @@ body {
   display: none;
 }
 
-#loading {
+/* #loading {
   display: none;
+} */
+
+html {
+  height: 100%;
+}
+
+.loading-div {
+  display: flex;
+  justify-content: center;
+}
+
+.loader {
+  /* position: absolute; */
+  /* top: calc(50% - 32px); */
+  left: calc(50% - 32px);
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  perspective: 800px;
+  /* padding-left: 100px; */
+}
+
+.inner {
+  position: absolute;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;  
+}
+
+.inner.one {
+  left: 0%;
+  top: 0%;
+  animation: rotate-one 1s linear infinite;
+  border-bottom: 3px solid #858585;
+}
+
+.inner.two {
+  right: 0%;
+  top: 0%;
+  animation: rotate-two 1s linear infinite;
+  border-right: 3px solid #858585;
+}
+
+.inner.three {
+  right: 0%;
+  bottom: 0%;
+  animation: rotate-three 1s linear infinite;
+  border-top: 3px solid #858585;
+}
+
+@keyframes rotate-one {
+  0% {
+    transform: rotateX(35deg) rotateY(-45deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(35deg) rotateY(-45deg) rotateZ(360deg);
+  }
+}
+
+@keyframes rotate-two {
+  0% {
+    transform: rotateX(50deg) rotateY(10deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(50deg) rotateY(10deg) rotateZ(360deg);
+  }
+}
+
+@keyframes rotate-three {
+  0% {
+    transform: rotateX(35deg) rotateY(55deg) rotateZ(0deg);
+  }
+  100% {
+    transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
+  }
 }
