--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,6 @@
 .App {
   text-align: center;
-<<<<<<< HEAD
   /* padding-bottom: 100px; */
-=======
-  padding-bottom: 100px;
->>>>>>> a6b305980759fbc461c5b169b6c30697d46acb34
 }
 
 #lol-header {
@@ -57,7 +53,8 @@
 
   /* min-height: 100vh; */
   /* height: 570px; */
-  max-height: 78vh;
+  max-height: 89vh;
+  min-height: 89vh;
   overflow-y: scroll;
   /* overflow: hidden;  */
   /* border-left: 2px solid rgb(221, 221, 221); */
@@ -81,11 +78,8 @@
   background-size: cover;
   width: 100%;
   max-width: 100%;
-<<<<<<< HEAD
   /* height: 100vh;
   max-height: 100vh;   */
-=======
->>>>>>> a6b305980759fbc461c5b169b6c30697d46acb34
 }
 
 #btn-div {
@@ -162,7 +156,6 @@
   display: none;
 }
 
-<<<<<<< HEAD
 /* #loading {
   display: none;
 } */
@@ -241,8 +234,4 @@ html {
   100% {
     transform: rotateX(35deg) rotateY(55deg) rotateZ(360deg);
   }
-=======
-#loading {
-  display: block;
->>>>>>> a6b305980759fbc461c5b169b6c30697d46acb34
 }
